--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-weight: 500;
 }
 p{
-    font-weight: 400;
+    font-weight: 300;
 }
 
 /* Universal */
@@ -59,3 +59,106 @@ header{
     padding:20px 26px;
     border-radius: 5px;
 }
+
+/* first panel */
+
+#first-panel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #3C505B;
+    box-sizing: border-box;
+    padding: 50px;
+}
+
+#left-text{
+    font-size: 25px;
+    width: 50%;
+    display: inline-block;
+    position: relative;
+    bottom:30px;
+}
+
+img{
+    border-radius: 10px;
+}
+
+#getstarted2{
+    background-color: #2ED5B9;
+    color: #283B49;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 22px 18px;
+    font-size: 18px;
+}
+
+#readmore2{
+    border: 2px dashed white;
+    color:white;
+    border-radius: 5px;
+    text-decoration: none;
+    padding:20px 26px;
+    font-size: 18px;
+}
+
+#left-text p{
+    font-size: 18px;
+}
+
+#left-text h1{
+    margin-top:0px;
+}
+
+#left-text h4{
+    margin-bottom:10px;
+}
+
+/* middle panel */
+#caption{
+    text-align: center;
+}
+
+#caption p{
+    width: 70%;
+    display: inline-block;
+}
+
+#caption h1{
+    font-size: 40px;
+    margin-top: 100px;
+    margin-bottom: 10px;
+}
+
+#blocks{
+    margin-top: 50px;
+}
+
+.block{
+    width:30%;
+    height:250px;
+    background-color: #122835;
+    color:white;
+    display: inline-block;
+    margin:20px;
+    border-radius: 15px;
+    overflow: auto;
+}
+
+i{
+    font-size: 45px;
+    margin:30px;
+    color:#2DAE9A;
+}
+
+.block h3{
+    margin-left: 30px;
+    margin-top: 0px;
+}
+
+.block p{
+    margin-left: 30px;
+    width: 70%;
+}
+
+
